--- a/Flights/src/gui/Register.fxml
+++ b/Flights/src/gui/Register.fxml
@@ -1,8 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <GridPane hgap="10.0" vgap="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="83.5999755859375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="189.00001220703126" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="82.59998779296876" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="192.7999755859375" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <StackPane.margin>
+            <Insets />
+         </StackPane.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <children>
+            <PasswordField promptText="John" GridPane.columnIndex="1" />
+            <PasswordField promptText="Doe" GridPane.columnIndex="3" />
+            <PasswordField promptText="Johnny533" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <PasswordField promptText="Password" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <PasswordField promptText="johndoe@gmail.com" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <PasswordField promptText="123456789" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <PasswordField promptText="Street Name" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="First Name:">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Last Name:" GridPane.columnIndex="2">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Username:" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Password" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Social Security Number:" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Email:" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Address:" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Security Question: " wrapText="true" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Answer:" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Label>
+            <PasswordField GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <CheckBox mnemonicParsing="false" text="Admin?" translateX="10.0" GridPane.rowIndex="5" />
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" text="Submit" translateX="155.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <font>
+                  <Font name="Book Antiqua" size="12.0" />
+               </font>
+            </Button>
+            <ComboBox prefHeight="26.0" prefWidth="189.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <PasswordField promptText="City" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <GridPane hgap="10.0" vgap="10.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="89.5999755859375" minWidth="10.0" prefWidth="78.99998779296875" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.5999755859375" minWidth="10.0" prefWidth="103.80001220703123" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <PasswordField promptText="Zipcode" GridPane.columnIndex="1" />
+                  <ComboBox prefHeight="26.0" prefWidth="81.0" promptText="State" />
+               </children>
+            </GridPane>
+         </children>
+      </GridPane>
+   </children>
+</StackPane>
