--- a/Flights/src/gui/Splash.fxml
+++ b/Flights/src/gui/Splash.fxml
@@ -6,18 +6,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <ProgressBar prefHeight="18.0" prefWidth="434.0" progress="0.5" BorderPane.alignment="CENTER" />
+      <ProgressBar prefHeight="18.0" prefWidth="434.0" progress="0.0" BorderPane.alignment="CENTER" />
    </center>
    <padding>
       <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
    </padding>
    <top>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Flights R US" BorderPane.alignment="CENTER">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Flights R US" translateY="50.0" BorderPane.alignment="CENTER">
          <font>
-            <Font size="67.0" />
+            <Font name="Book Antiqua" size="67.0" />
          </font>
       </Text>
    </top>
