--- a/Flights/src/gui/Register.fxml
+++ b/Flights/src/gui/Register.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane hgap="10.0" vgap="10.0">
@@ -96,7 +95,6 @@
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
-            <ComboBox prefHeight="26.0" prefWidth="189.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <PasswordField promptText="City" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <GridPane hgap="10.0" vgap="10.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
               <columnConstraints>
@@ -111,6 +109,11 @@
                   <ComboBox prefHeight="26.0" prefWidth="81.0" promptText="State" />
                </children>
             </GridPane>
+            <Label text="When were you born?" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Book Antiqua" size="18.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
