--- a/Flights/src/gui/Login.fxml
+++ b/Flights/src/gui/Login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
@@ -28,11 +28,11 @@
             <Insets bottom="10.0" left="60.0" right="60.0" top="10.0" />
          </padding>
          <children>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="72.0" text="Log In" translateX="164.0" GridPane.rowIndex="3">
+            <Button mnemonicParsing="false" onAction="#clicked" prefHeight="26.0" prefWidth="72.0" text="Log In" translateX="164.0" GridPane.rowIndex="3">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font></Button>
-            <Button mnemonicParsing="false" text="Forgot Password" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button mnemonicParsing="false" onAction="#clicked" text="Forgot Password" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font></Button>
@@ -53,7 +53,7 @@
                   <Font name="Book Antiqua" size="36.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="84.0" text="New User" translateX="200.0" translateY="-20.0" GridPane.rowIndex="4">
+            <Button mnemonicParsing="false" onAction="#clicked" prefHeight="26.0" prefWidth="84.0" text="New User" translateX="200.0" translateY="-20.0" GridPane.rowIndex="4">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font></Button>
