--- a/Flights/src/gui/Splash.fxml
+++ b/Flights/src/gui/Splash.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <ProgressBar prefHeight="18.0" prefWidth="434.0" progress="0.0" BorderPane.alignment="CENTER" />
-   </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
    <padding>
       <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
    </padding>
@@ -20,4 +17,11 @@
          </font>
       </Text>
    </top>
+   <center>
+      <Button mnemonicParsing="false" onAction="#clicked" text="Start" translateY="20.0" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="Book Antiqua" size="24.0" />
+         </font>
+      </Button>
+   </center>
 </BorderPane>
