--- a/Flights/src/gui/Splash.fxml
+++ b/Flights/src/gui/Splash.fxml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" />
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <GridPane>
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.5999755859375" minWidth="0.0" prefWidth="0.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="575.1999999999999" minWidth="10.0" prefWidth="575.1999999999999" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.19995117187494" minWidth="0.0" prefWidth="0.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="203.99998168945314" minHeight="0.0" prefHeight="203.99998168945314" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="266.8" minHeight="10.0" prefHeight="140.80001831054688" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Flights R US" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="64.0" />
+               </font>
+            </Label>
+            <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="71.0" text="Start" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </GridPane>
+   </children>
+</StackPane>
