--- a/Flights/src/gui/Splash.fxml
+++ b/Flights/src/gui/Splash.fxml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <ProgressBar prefHeight="18.0" prefWidth="434.0" progress="0.0" BorderPane.alignment="CENTER" />
-   </center>
-   <padding>
-      <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-   </padding>
-   <top>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Flights R US" translateY="50.0" BorderPane.alignment="CENTER">
-         <font>
-            <Font name="Book Antiqua" size="67.0" />
-         </font>
-      </Text>
-   </top>
-</BorderPane>
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SplashController">
+   <children>
+      <GridPane>
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.5999755859375" minWidth="0.0" prefWidth="0.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="575.1999999999999" minWidth="10.0" prefWidth="575.1999999999999" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.19995117187494" minWidth="0.0" prefWidth="0.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="203.99998168945314" minHeight="0.0" prefHeight="203.99998168945314" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="266.8" minHeight="10.0" prefHeight="140.80001831054688" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Flights R US" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="64.0" />
+               </font>
+            </Label>
+            <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="71.0" text="Start" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </GridPane>
+   </children>
+</StackPane>
