--- a/Flights/src/gui/Account.fxml
+++ b/Flights/src/gui/Account.fxml
@@ -3,16 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AccountController">
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
@@ -53,12 +51,12 @@
                         <Font name="Book Antiqua" size="14.0" />
                      </font>
                   </Label>
-                  <PasswordField promptText="Flight ID" GridPane.columnIndex="2" />
                   <Button mnemonicParsing="false" text="Enter" GridPane.columnIndex="3">
                      <font>
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
+                  <TextField promptText="Flight ID" GridPane.columnIndex="2" />
                </children>
             </GridPane>
             <Label text="Your Flights" translateX="110.0" GridPane.columnIndex="1">
@@ -66,12 +64,6 @@
                   <Font name="Book Antiqua Bold" size="36.0" />
                </font>
             </Label>
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-              <columns>
-                <TableColumn prefWidth="75.0" text="Flight ID" />
-                <TableColumn prefWidth="75.0" text="From" />
-              </columns>
-            </TableView>
          </children>
          <StackPane.margin>
             <Insets />
