--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AdminController">
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
@@ -60,10 +60,6 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <PasswordField GridPane.columnIndex="1" />
-            <PasswordField GridPane.columnIndex="3" />
-            <PasswordField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <PasswordField GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <GridPane hgap="5.0" vgap="5.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="63.5999755859375" minWidth="10.0" prefWidth="63.5999755859375" />
@@ -74,8 +70,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ComboBox prefWidth="150.0" />
-                  <ComboBox prefWidth="150.0" GridPane.columnIndex="2" />
+                  <ComboBox prefWidth="150.0" promptText="00" />
+                  <ComboBox prefWidth="150.0" promptText="00" GridPane.columnIndex="2" />
                   <Label text=":" GridPane.columnIndex="1">
                      <font>
                         <Font name="Book Antiqua Bold" size="14.0" />
@@ -92,8 +88,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ComboBox prefWidth="150.0" />
-                  <ComboBox prefWidth="150.0" GridPane.columnIndex="1" />
+                  <ComboBox prefWidth="150.0" promptText="Month" visibleRowCount="12" />
+                  <ComboBox prefWidth="150.0" promptText="Day" GridPane.columnIndex="1" />
                </children>
             </GridPane>
             <Button mnemonicParsing="false" text="Add" translateX="170.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
@@ -101,6 +97,10 @@
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
+            <TextField GridPane.columnIndex="1" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="3" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
