--- a/Flights/src/gui/Login.fxml
+++ b/Flights/src/gui/Login.fxml
@@ -56,7 +56,7 @@
                   <Insets bottom="10.0" left="10.0" right="70.0" top="10.0" />
                </padding>
             </GridPane>
-            <Button fx:id="newButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="3" GridPane.valignment="TOP">
+            <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="3" GridPane.valignment="TOP">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
