Log in page buttons (register, search, log in) are funtional

--- a/Flights/src/gui/Login.fxml
+++ b/Flights/src/gui/Login.fxml
@@ -49,14 +49,14 @@
                         <Font name="Book Antiqua" size="24.0" />
                      </font>
                   </Label>
-                  <PasswordField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField GridPane.columnIndex="1" />
+                  <PasswordField fx:id="tf_password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="tf_username" GridPane.columnIndex="1" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="70.0" top="10.0" />
                </padding>
             </GridPane>
-            <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="3" GridPane.valignment="TOP">
+            <Button fx:id="button_register" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="3" GridPane.valignment="TOP">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
@@ -70,12 +70,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" text="Forgot Password" GridPane.columnIndex="1">
+                  <Button fx:id="button_forgot_password" mnemonicParsing="false" onAction="#forgotPassword" text="Forgot Password" GridPane.columnIndex="1">
                      <font>
                         <Font name="Book Antiqua" size="14.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="130.0" text="Log In">
+                  <Button fx:id="button_login" mnemonicParsing="false" onAction="#login" prefHeight="28.0" prefWidth="130.0" text="Log In">
                      <font>
                         <Font name="Book Antiqua" size="14.0" />
                      </font>
