--- a/Flights/src/gui/Register.fxml
+++ b/Flights/src/gui/Register.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.RegisterController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RegisterController">
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
@@ -116,7 +116,7 @@
             <TextField promptText="Password" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <TextField promptText="Doe" GridPane.columnIndex="3" />
             <TextField GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <Button fx:id="button" mnemonicParsing="false" onAction="#goToLogin" prefHeight="26.0" prefWidth="56.0" text="Back" GridPane.columnIndex="3" GridPane.rowIndex="5">
+            <Button fx:id="button" mnemonicParsing="false" prefHeight="26.0" prefWidth="56.0" text="Back" GridPane.columnIndex="3" GridPane.rowIndex="5">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
