--- a/Flights/src/gui/Login.fxml
+++ b/Flights/src/gui/Login.fxml
@@ -51,8 +51,8 @@
                         <Font name="Book Antiqua" size="24.0" />
                      </font>
                   </Label>
-                  <PasswordField fx:id="tf_password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="tf_username" GridPane.columnIndex="1" />
+                  <PasswordField fx:id="tf_password" promptText="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="tf_username" promptText="username" GridPane.columnIndex="1" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="70.0" top="10.0" />
