--- a/Flights/src/gui/Forgot.fxml
+++ b/Flights/src/gui/Forgot.fxml
@@ -44,8 +44,21 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField alignment="CENTER"  promptText="Answer" />
+                  <TextField alignment="CENTER" promptText="Answer" />
                   <Button fx:id="button_enter" mnemonicParsing="false" prefHeight="26.0" prefWidth="64.0" text="Enter" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="  " />
+                  <Button mnemonicParsing="false" text="Back" GridPane.columnIndex="1" />
                </children>
             </GridPane>
          </children>
