--- a/Flights/src/gui/Register.fxml
+++ b/Flights/src/gui/Register.fxml
@@ -84,7 +84,7 @@
                <font>
                   <Font name="Book Antiqua" size="13.0" />
                </font></CheckBox>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" text="Submit" translateX="155.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Button fx:id="button_submit" mnemonicParsing="false" onAction="#goToLoginSubmit" prefHeight="26.0" prefWidth="79.0" text="Submit" translateX="155.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
@@ -116,7 +116,7 @@
             <TextField promptText="Password" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <TextField promptText="Doe" GridPane.columnIndex="3" />
             <TextField GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <Button fx:id="button" mnemonicParsing="false" prefHeight="26.0" prefWidth="56.0" text="Back" GridPane.columnIndex="3" GridPane.rowIndex="5">
+            <Button fx:id="button_back" mnemonicParsing="false" onAction="#goToLogin" prefHeight="26.0" prefWidth="56.0" text="Back" GridPane.columnIndex="3" GridPane.rowIndex="5">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
