Cleaned up the scenes

--- a/Flights/src/gui/Login.fxml
+++ b/Flights/src/gui/Login.fxml
@@ -38,7 +38,6 @@
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Username: ">
@@ -67,24 +66,24 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_forgot_password" mnemonicParsing="false" onAction="#forgotPassword" text="Forgot Password">
-                     <font>
-                        <Font name="Book Antiqua" size="14.0" />
-                     </font>
-                  </Button>
                   <Label fx:id="label_login_message" textFill="RED" GridPane.columnIndex="1">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <Button fx:id="button_login" mnemonicParsing="false" onAction="#login" prefHeight="28.0" prefWidth="130.0" text="Log In">
+                     <font>
+                        <Font name="Book Antiqua" size="14.0" />
+                     </font>
+                  </Button>
                </children>
             </GridPane>
-            <Button fx:id="button_login" mnemonicParsing="false" onAction="#login" prefHeight="28.0" prefWidth="130.0" text="Log In" GridPane.rowIndex="3">
+            <Button fx:id="button_register" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="4" GridPane.valignment="TOP">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Button>
-            <Button fx:id="button_register" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="4" GridPane.valignment="TOP">
+            <Button fx:id="button_forgot_password" mnemonicParsing="false" onAction="#forgotPassword" text="Forgot Password" GridPane.rowIndex="3">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
