--- a/Flights/src/gui/Forgot.fxml
+++ b/Flights/src/gui/Forgot.fxml
@@ -17,45 +17,36 @@
           <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="82.19998779296874" minHeight="10.0" prefHeight="82.19998779296874" valignment="BOTTOM" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="47.00000610351562" minHeight="10.0" prefHeight="24.60001220703124" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="47.00000610351562" minHeight="10.0" prefHeight="24.60001220703124" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="108.79998168945312" minHeight="10.0" prefHeight="88.00001220703125" valignment="CENTER" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="106.19998779296876" minHeight="10.0" prefHeight="81.59998779296873" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <Label text="  " GridPane.rowIndex="3">
+            <Label text="  " GridPane.rowIndex="1">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <GridPane>
+            <GridPane hgap="5.0" GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="166.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="114.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="When were you born?">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
                   <TextField fx:id="tf_security_answer" alignment="CENTER" promptText="Answer" GridPane.columnIndex="1" />
-                  <Button fx:id="button_enter" mnemonicParsing="false" onAction="#revealPassword" prefHeight="26.0" prefWidth="62.0" text="Enter" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField fx:id="tf_username" prefHeight="32.0" prefWidth="114.0" promptText="EnterUsername" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="tf_username" promptText="EnterUsername" />
+                  <Button fx:id="button_enter" mnemonicParsing="false" onAction="#revealPassword" prefHeight="26.0" prefWidth="62.0" text="Enter" translateX="-30.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <Label fx:id="label_password_message" textFill="#ee0303" GridPane.rowIndex="2">
+            <Label prefHeight="86.0" prefWidth="279.0" text="Where were you born?" textAlignment="CENTER" wrapText="true">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Book Antiqua" size="30.0" />
                </font>
             </Label>
          </children>
