--- a/Flights/src/gui/AdminLogin.fxml
+++ b/Flights/src/gui/AdminLogin.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AdminLogin">
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
@@ -25,7 +25,7 @@
             <RowConstraints maxHeight="120.79996337890623" minHeight="10.0" prefHeight="82.39999999999998" valignment="TOP" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Log In">
+            <Label text="Admin Log In">
                <font>
                   <Font name="Book Antiqua" size="64.0" />
                </font>
@@ -57,7 +57,7 @@
                   <Insets bottom="10.0" left="10.0" right="70.0" top="10.0" />
                </padding>
             </GridPane>
-            <GridPane hgap="10.0" vgap="5.0" GridPane.rowIndex="2">
+            <GridPane hgap="10.0" vgap="10.0" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -71,35 +71,19 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="28.0" prefWidth="124.0" text="Log In">
+                  <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="28.0" prefWidth="130.0" text="Log In">
                      <font>
                         <Font name="Book Antiqua" size="14.0" />
                      </font>
                   </Button>
                </children>
             </GridPane>
-            <GridPane hgap="10.0" GridPane.rowIndex="3">
-              <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Button fx:id="ForgotButton" mnemonicParsing="false" onAction="#forgotPassword" text="Forgot Password">
-                     <font>
-                        <Font name="Book Antiqua" size="14.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="newUserButton" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.columnIndex="1" GridPane.valignment="TOP">
-                     <font>
-                        <Font name="Book Antiqua" size="14.0" />
-                     </font>
-                  </Button>
-               </children>
-            </GridPane>
-            <Button fx:id="OtherButton" mnemonicParsing="false" onAction="#goToAdminLogin" prefHeight="28.0" prefWidth="119.0" text="Admin Log In" GridPane.rowIndex="4">
+            <Button fx:id="newUserButton" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="3" GridPane.valignment="TOP">
+               <font>
+                  <Font name="Book Antiqua" size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" prefHeight="28.0" prefWidth="120.0" text="Back" GridPane.rowIndex="4">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
