--- a/Flights/src/gui/Account.fxml
+++ b/Flights/src/gui/Account.fxml
@@ -66,17 +66,20 @@
                   <Font name="Book Antiqua Bold" size="36.0" />
                </font>
             </Label>
-            <TableView fx:id="yourFlight" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-              <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-              </columns>
-            </TableView>
             <Button fx:id="refreshButton" mnemonicParsing="false" onAction="#refresh" prefHeight="26.0" prefWidth="63.0" text="Refresh" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <columns>
+                  <TableColumn prefWidth="75.0" text="ID" />
+                  <TableColumn prefWidth="73.5999755859375" text="Depart" />
+                  <TableColumn prefWidth="91.20001220703125" text="Take Off" />
+                  <TableColumn prefWidth="91.20002746582031" text="Arrive" />
+                  <TableColumn prefWidth="100.79998779296875" text="Landing" />
+               </columns>
+            </TableView>
          </children>
          <StackPane.margin>
             <Insets />
