--- a/Flights/src/gui/Logout.fxml
+++ b/Flights/src/gui/Logout.fxml
@@ -15,36 +15,20 @@
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane GridPane.rowIndex="1">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Button fx:id="yesButton" mnemonicParsing="false" onAction="#logout" prefHeight="26.0" prefWidth="50.0" text="Yes">
-                     <font>
-                        <Font name="Book Antiqua" size="13.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="noButon" mnemonicParsing="false" onAction="#notLogOut" prefHeight="26.0" prefWidth="52.0" text="No" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="Book Antiqua" size="13.0" />
-                     </font>
-                  </Button>
-               </children>
-            </GridPane>
             <Label text="Are you sure?">
                <font>
                   <Font name="Book Antiqua" size="36.0" />
                </font>
             </Label>
+            <Button fx:id="yesButton" mnemonicParsing="false" onAction="#logout" prefHeight="36.0" prefWidth="103.0" text="Log Out" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="18.0" />
+               </font>
+            </Button>
          </children>
       </GridPane>
    </children>
